--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,8 +10,6 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: taskdb
-      MYSQL_USER: root
-      MYSQL_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
 
@@ -25,22 +23,36 @@ services:
       - db
     environment:
       DB_HOST: db
+      DB_PORT: 3306
       DB_USER: root
       DB_PASSWORD: password
       DB_NAME: taskdb
       PORT: 3001
+      HOST: 0.0.0.0
 
   client:
     build:
       context: ./client
       dockerfile: Dockerfile.prod
       args:
-        REACT_APP_SERVER_URL: http://4.233.149.184:3001/api
+        REACT_APP_SERVER_URL: http://4.233.149.184/api
     container_name: taskapp-client-prod
     restart: unless-stopped
     ports:
       - "3002:80"
     depends_on:
+      - server
+
+  nginx:
+    image: nginx:alpine
+    container_name: taskapp-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - client
       - server
 
 volumes:
